Adjst frontend style
Signed-off-by: lucklove <gnu.crazier@gmail.com>

--- a/images/chaos-dashboard/public/index.html
+++ b/images/chaos-dashboard/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>chaos dashboard</title>
   </head>
-  <body>
+  <body style="background-color: #F5F5F5">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
