--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -15,13 +15,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
 	  -->
     <title>Chaos Mesh Dashboard</title>
-    <!--     
-      Material-UI was designed with the Roboto font in mind. 
-      Load from Google Web Fonts. 
-	  -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <!-- Load the Material Icons -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
